--- a/packages/md/package.json
+++ b/packages/md/package.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/package.json",
-	"name": "@astropub/md",
-	"description": "Render any Markdown content in Astro",
+	"name": "@mashehu/astropub-md",
+	"description": "Render any Markdown content in Astro. Forked from @astropub/md",
 	"version": "1.0.0",
 	"type": "module",
 	"license": "CC0-1.0",
@@ -55,7 +55,14 @@
 		"remark"
 	],
 	"author": "Jonathan Neal <jonathantneal@hotmail.com>",
-	"bugs": "https://github.com/astro-community/md/issues",
-	"homepage": "https://github.com/astro-community/md",
-	"repository": "https://github.com/astro-community/md.git"
+	"contributors": [
+		"mashehu"
+	],
+	"bugs": "https://github.com/mashehu/astropub-md/issues",
+	"homepage": "https://github.com/mashehu/astropub-md",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mashehu/astropub-md.git",
+		"directory": "packages/md"
+	}
 }
