--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"start": "cd demo; astro dev",
 		"build": "cd demo; astro build",
 		"serve": "cd demo; astro preview",
-		"release": "npm --workspaces publish --access public"
+		"release": "npm --workspaces packages/md --access public"
 	},
 	"prettier": {
 		"semi": false,
